# gitmon

./: README.md  pyproject.toml
src/gitmon/: main.py
