[project]
name = "gitmon"
version = "1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests",
]



[project.scripts]
gitmon = "gitmon.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gitmon"
version = "1.0"
description = "A tool for monitoring github commits"
authors = [
    "winter"
]

